--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --watch src --exec ts-node src/index.ts"
+    "start:dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "husky:prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,8 @@
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
