chore: adicionar jest config

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
   "*.ts": [
-    "yarn eslint 'src/**' --fix",
-    "yarn prettier --check 'src/**'"
+    "yarn eslint src/** --fix",
+    "yarn prettier --check src/**"
   ]
 }
